# nepal-ledger

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  drizzle.config.ts  open-next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
scrapers/: README.md  pyproject.toml
scrapers/_common/: __init__.py  _common_paths.py  devanagari_normalization.py  hashing.py  municipality_resolver.py  parser_contract.py  periods.py  types.py
scrapers/_common/tests/: __init__.py  test_devanagari_normalization.py  test_municipality_resolver.py
scrapers/cbs_nphc/: __init__.py  parser.py  two_mode_reader.py
scrapers/cbs_nphc/tests/: test_parser.py  test_two_mode_reader.py
scrapers/cbs_nphc/tests/fixtures/: Hhld01_OwnershipOfHouse.csv  Hhld02_FoundationOfHouse.csv  Hhld05_FloorOfHouse.csv  Hhld10_HouseholdFacility.csv  Indv01_PopulationBySex.csv
scrapers/mof_fiscal_transfers/: __init__.py  parser.py
scrapers/mof_fiscal_transfers/tests/: conftest.py  test_parser.py
scrapers/mof_fiscal_transfers/tests/fixtures/: sample.xlsx
scrapers/nrb_bfi/: LAYOUT_VERSIONS.md  __init__.py  _filename.py  _normalize.py  _periods.py  _sheets.py  cli.py  parser.py  schema_probe.py
scrapers/nrb_bfi/fixtures/: Saun-2082-fixture.xlsx  _build_fixture.py
scrapers/nrb_bfi/tests/: test_parser.py
scrapers/nrb_bfi/tests/fixtures/: bhadau_2082.xlsx
scrapers/nrb_cmefs/: __init__.py  parser.py
scrapers/nrb_cmefs/tests/: test_parser.py
scrapers/nrb_ncpi/: __init__.py  parser.py
scrapers/nrb_ncpi/tests/: test_parser.py
scrapers/nso_archive/: README.md  __init__.py  archive.py  cli.py  discover.py  manifest.py
scrapers/nso_archive/tests/: test_archive.py  test_discover.py  test_manifest.py
scrapers/nso_archive/tests/fixtures/: category_1058.html
scrapers/ocr_eval/: .gitignore  harness.py  inspect_pdfs.py  render_thumbs.py
(+281 files in other folders)
