[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepal-ledger-scrapers"
version = "0.1.0"
description = "Deterministic Python parsers for Nepal Ledger data sources. See ADR-0003."
requires-python = ">=3.12,<3.13"
dependencies = [
  "pandas>=2.2,<3",
  "pdfplumber>=0.11,<0.12",
  "httpx>=0.27,<0.28",
  "python-dateutil>=2.9,<3",
  "rapidfuzz>=3.9,<4",
  "beautifulsoup4>=4.12,<5",
  "lxml>=5.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<0.10",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2,<3",
  "types-python-dateutil>=2.9,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["_common*", "nrb_ncpi*", "nso_archive*", "cbs_nphc*"]
namespaces = false

# The on-disk folder is `nrb-ncpi` (hyphenated, matching the source_id) but
# Python module names cannot contain hyphens. The parser package is imported
# as `nrb_ncpi`; a thin `nrb_ncpi/__init__.py` symlinks the implementation.
# See scrapers/README.md for the rationale.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
exclude = ["build/", "dist/", ".venv/"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["_common/tests", "nrb_ncpi/tests", "nso_archive/tests", "cbs_nphc/tests"]
addopts = "-ra --strict-markers"
